--- a/style.css
+++ b/style.css
@@ -1,13 +1,85 @@
-.bodyed {
+* {
+  box-sizing: border-box; }
+
+body {
+  font-family: 'Roboto', sans-serif;
+  font-size: 16px;
+  line-height: 1.4; }
+
+.cards {
   display: flex;
   flex-direction: row;
-  justify-content: space-around;
   flex-wrap: wrap; }
-  .bodyed .card {
-    width: 20rem;
-    height: 20rem;
-    margin-bottom: 40px;
-    background-color: aliceblue; }
-    .bodyed .card .card-img-top {
-      height: 40px;
-      overflow: hidden; }
+
+.my-card {
+  height: 300px;
+  width: 300px;
+  overflow: hidden;
+  background-color: #fff;
+  box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.3);
+  transition: box-shadow 0.3s;
+  margin: 1vh; }
+  .my-card a {
+    color: inherit;
+    text-decoration: none; }
+
+.my-card:hover {
+  box-shadow: 0px 0px 50px rgba(0, 0, 0, 0.6); }
+
+.my-card__thumb {
+  height: 300px;
+  width: 300px;
+  transition: all 0.3s;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  opacity: 1; }
+  .my-card__thumb i {
+    font-size: 300px;
+    color: gainsboro;
+    opacity: 1;
+    transform: scale(1);
+    transition: opacity 0.3s, transform 0.3s; }
+  .my-card:hover .my-card__thumb i {
+    opacity: 0.6;
+    transform: scale(1.2); }
+  .my-card:hover .my-card__thumb {
+    height: 25px; }
+
+.my-card:hover .my-card__thumb img {
+  opacity: 0.6; }
+
+.my-card__body {
+  background-color: #fff;
+  position: relative;
+  padding: 0px;
+  height: 0px;
+  transition: height 0.3s; }
+  .my-card:hover .my-card__body {
+    height: 275px; }
+
+.my-card__infos {
+  height: 275px; }
+
+.my-card__title {
+  width: 300px;
+  position: absolute;
+  height: 25px;
+  top: -25px;
+  text-transform: uppercase;
+  text-align: center;
+  padding: 0 0 0 0;
+  margin: 0;
+  font-size: 100%;
+  color: #000;
+  font-weight: bold; }
+
+.my-card__subcategorie {
+  font-size: 14px;
+  margin: 0;
+  padding: 0; }
+
+.my-card__mails {
+  font-size: 14px;
+  margin: 0;
+  padding: 0; }
